fixed alignemts

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import-normalize;
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap");
 @tailwind base;
 @tailwind components;
@@ -8,7 +9,8 @@
   padding: 0;
   margin: 0;
   font-weight: 700;
-  font-size: 24px;
+
+  box-sizing: border-box;
 }
 .App {
   background-color: #9060dd;
